Fixed result overlap

--- a/ClientFront/src/app/modules/home/home.component.scss
+++ b/ClientFront/src/app/modules/home/home.component.scss
@@ -35,11 +35,6 @@ a.serviceItem {
   justify-content: space-between;
 }
 
-#resultList {
-  margin: 10px;
-  padding: 0;
-}
-
 #categoryName {
   margin: 15px 0 10px 0;
   padding: 2px;
